# end-2-end-mlops-pipeline

./: .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  mlflow.db  pyproject.toml  requirements.txt  test_api.py
.github/workflows/: test.yml
datasets/: submission.csv  test.parquet  train.parquet  train_model.csv  val.parquet
mlartifacts/1/models/m-293b423de34b45749326f4957be551a1/artifacts/: MLmodel
models/: AdaBoost.joblib  DecisionTree.joblib  GaussianNB.joblib  GradientBoosting.joblib  KNN.joblib  LogisticRegression.joblib  SVC.joblib
models/transformers/: preprocessor.joblib
notebooks/: exploration.ipynb
src/: extract_data.py  hyperparameter_tuning.py  models_list.py  predict_model.py  preprocessing.py  results_plot.py  train_models.py
