[project]
name = "end-2-end-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.41.0",
]
